tests/baselines/reference/invalidImportAliasIdentifiers.errors.txt
==== tests/cases/conformance/internalModules/importDeclarations/invalidImportAliasIdentifiers.ts (4 errors) ====
    // none of these should work, since non are actually modules
    
    var V = 12;
    
    import v = V;
    ~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'V'.
    
    class C {
        name: string;
    }
    
    import c = C;
    ~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'C'.
    
    enum E {
        Red, Blue
    }
    
    import e = E;
    ~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'E'.
    
    interface I {
        id: number;
    }
    
    import i = I;
    ~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'I'.
    